--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -278,8 +278,9 @@ Mcu.UserName=STM32H563ZITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NETXDUO.ETH_ON=1
-NETXDUO.IPParameters=ETH_ON,NX_APP_MEM_POOL_SIZE
+NETXDUO.IPParameters=ETH_ON,NX_APP_MEM_POOL_SIZE,NX_MAX_MULTICAST_GROUPS
 NETXDUO.NX_APP_MEM_POOL_SIZE=10240
+NETXDUO.NX_MAX_MULTICAST_GROUPS=256
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI11_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
