--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -92,9 +92,9 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
-FDCAN2.CalculateBaudRateNominal=3500000
-FDCAN2.CalculateTimeBitNominal=285
-FDCAN2.CalculateTimeQuantumNominal=28.571428571428573
+FDCAN2.CalculateBaudRateNominal=4480000
+FDCAN2.CalculateTimeBitNominal=223
+FDCAN2.CalculateTimeQuantumNominal=22.321428571428573
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
 FDCAN2.NominalPrescaler=5
 FDCAN2.NominalTimeSeg1=1
@@ -115,12 +115,13 @@ GPDMA1.SRCDATAWIDTH_GPDMACH4=DMA_SRC_DATAWIDTH_HALFWORD
 GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
-I2C2.Timing=0x60606293
+I2C2.Timing=0x80606391
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
 MMTAppRegionsCount=0
 MMTConfigApplied=false
+MMTSectionSuffix=_Section
 Mcu.CPN=STM32H563ZIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
@@ -276,8 +277,9 @@ Mcu.UserName=STM32H563ZITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NETXDUO.ETH_ON=1
-NETXDUO.IPParameters=ETH_ON,NX_APP_MEM_POOL_SIZE,NX_MAX_MULTICAST_GROUPS
+NETXDUO.IPParameters=ETH_ON,NX_APP_MEM_POOL_SIZE,NX_MAX_MULTICAST_GROUPS,NX_ENABLE_VLAN
 NETXDUO.NX_APP_MEM_POOL_SIZE=10240
+NETXDUO.NX_ENABLE_VLAN=false
 NETXDUO.NX_MAX_MULTICAST_GROUPS=256
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -457,6 +459,13 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=MUX_SEL4
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PCC.Checker=false
+PCC.Line=STM32H563/H573
+PCC.MCU=STM32H563ZITx
+PCC.PartNumber=STM32H563ZITx
+PCC.Series=STM32H5
+PCC.Temperature=25
+PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
@@ -687,10 +696,11 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H563ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H5 V1.5.0
 ProjectManager.FreePins=false
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -706,96 +716,100 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
-RCC.ADCFreq_Value=175000000
-RCC.AHBFreq_Value=175000000
-RCC.APB1Freq_Value=175000000
-RCC.APB1TimFreq_Value=175000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,15-MX_RTC_Init-RTC-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+RCC.ADCFreq_Value=224000000
+RCC.AHBFreq_Value=224000000
+RCC.APB1Freq_Value=224000000
+RCC.APB1TimFreq_Value=224000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=87500000
-RCC.APB2TimFreq_Value=175000000
-RCC.APB3Freq_Value=175000000
+RCC.APB2Freq_Value=112000000
+RCC.APB2TimFreq_Value=224000000
+RCC.APB3Freq_Value=224000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=32000000
 RCC.CRSFreq_Value=48000000
 RCC.CSI_VALUE=4000000
-RCC.CortexFreq_Value=175000000
+RCC.CortexFreq_Value=224000000
 RCC.DACFreq_Value=32768
-RCC.EPOD_VALUE=4000000
-RCC.ETHFreq_Value=175000000
-RCC.FCLKCortexFreq_Value=175000000
+RCC.EPOD_VALUE=32000000
+RCC.ETHFreq_Value=224000000
+RCC.FCLKCortexFreq_Value=224000000
 RCC.FDCANClockSelection=RCC_FDCANCLKSOURCE_PLL1Q
-RCC.FDCANFreq_Value=175000000
+RCC.FDCANFreq_Value=224000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=175000000
+RCC.HCLKFreq_Value=224000000
 RCC.HSE_VALUE=25000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=64000000
-RCC.I2C1Freq_Value=175000000
-RCC.I2C2Freq_Value=175000000
-RCC.I2C3Freq_Value=175000000
-RCC.I2C4Freq_Value=175000000
-RCC.I3C1Freq_Value=175000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2N,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
-RCC.LPTIM1Freq_Value=175000000
-RCC.LPTIM2Freq_Value=175000000
-RCC.LPTIM3Freq_Value=175000000
-RCC.LPTIM4Freq_Value=175000000
-RCC.LPTIM5Freq_Value=175000000
-RCC.LPTIM6Freq_Value=175000000
-RCC.LPUART1Freq_Value=175000000
+RCC.I2C1Freq_Value=224000000
+RCC.I2C2Freq_Value=224000000
+RCC.I2C3Freq_Value=224000000
+RCC.I2C4Freq_Value=224000000
+RCC.I3C1Freq_Value=224000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.LPTIM1Freq_Value=224000000
+RCC.LPTIM2Freq_Value=224000000
+RCC.LPTIM3Freq_Value=224000000
+RCC.LPTIM4Freq_Value=224000000
+RCC.LPTIM5Freq_Value=224000000
+RCC.LPTIM6Freq_Value=224000000
+RCC.LPUART1Freq_Value=224000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSIRC_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
-RCC.MCO2PinFreq_Value=175000000
-RCC.OCTOSPIMFreq_Value=175000000
+RCC.MCO2PinFreq_Value=224000000
+RCC.OCTOSPIMFreq_Value=224000000
 RCC.PLL2FRACN=0
-RCC.PLL2N=32
-RCC.PLL2PoutputFreq_Value=64000000
-RCC.PLL2QoutputFreq_Value=64000000
-RCC.PLL2RoutputFreq_Value=64000000
+RCC.PLL2N=64
+RCC.PLL2P=5
+RCC.PLL2PoutputFreq_Value=51200000
+RCC.PLL2Q=5
+RCC.PLL2QoutputFreq_Value=51200000
+RCC.PLL2RoutputFreq_Value=128000000
 RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
 RCC.PLL3RoutputFreq_Value=258000000
-RCC.PLLFRACN=4096
-RCC.PLLN=87
-RCC.PLLPoutputFreq_Value=175000000
-RCC.PLLQoutputFreq_Value=175000000
-RCC.PWRFreq_Value=175000000
+RCC.PLLFRACN=0
+RCC.PLLM=2
+RCC.PLLN=28
+RCC.PLLPoutputFreq_Value=224000000
+RCC.PLLQoutputFreq_Value=224000000
+RCC.PLLSourceVirtual=RCC_PLL1_SOURCE_HSI
+RCC.PWRFreq_Value=224000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=64000000
-RCC.SAI2Freq_Value=64000000
-RCC.SDMMC1Freq_Value=175000000
-RCC.SDMMC2Freq_Value=175000000
-RCC.SPI1Freq_Value=175000000
+RCC.SAI1Freq_Value=51200000
+RCC.SAI2Freq_Value=51200000
+RCC.SDMMC1Freq_Value=224000000
+RCC.SDMMC2Freq_Value=224000000
+RCC.SPI1Freq_Value=224000000
 RCC.SPI2CLockSelection=RCC_SPI2CLKSOURCE_PLL2P
-RCC.SPI2Freq_Value=64000000
-RCC.SPI3Freq_Value=175000000
-RCC.SPI4Freq_Value=87500000
-RCC.SPI5Freq_Value=175000000
-RCC.SPI6Freq_Value=87500000
-RCC.SYSCLKFreq_VALUE=175000000
+RCC.SPI2Freq_Value=51200000
+RCC.SPI3Freq_Value=224000000
+RCC.SPI4Freq_Value=112000000
+RCC.SPI5Freq_Value=224000000
+RCC.SPI6Freq_Value=112000000
+RCC.SYSCLKFreq_VALUE=224000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART12Freq_Value=175000000
-RCC.UART4Freq_Value=175000000
-RCC.UART5Freq_Value=175000000
-RCC.UART7Freq_Value=175000000
-RCC.UART8Freq_Value=175000000
-RCC.UART9Freq_Value=175000000
+RCC.UART12Freq_Value=224000000
+RCC.UART4Freq_Value=224000000
+RCC.UART5Freq_Value=224000000
+RCC.UART7Freq_Value=224000000
+RCC.UART8Freq_Value=224000000
+RCC.UART9Freq_Value=224000000
 RCC.UCPD1outputFreq_Value=8000000
-RCC.USART10Freq_Value=175000000
-RCC.USART11Freq_Value=175000000
-RCC.USART1Freq_Value=87500000
-RCC.USART2Freq_Value=175000000
-RCC.USART3Freq_Value=175000000
-RCC.USART6Freq_Value=175000000
+RCC.USART10Freq_Value=224000000
+RCC.USART11Freq_Value=224000000
+RCC.USART1Freq_Value=112000000
+RCC.USART2Freq_Value=224000000
+RCC.USART3Freq_Value=224000000
+RCC.USART6Freq_Value=224000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=350000000
-RCC.VCOPLL2OutputFreq_Value=128000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=448000000
+RCC.VCOPLL2OutputFreq_Value=256000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
 SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
@@ -832,10 +846,11 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI2.CalculateBaudRate=32.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI2.CalculateBaudRate=25.6 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_TIMER_TICKS_PER_SECOND,TX_APP_MEM_POOL_SIZE
