--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -709,7 +709,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,15-MX_IWDG_Init-IWDG-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=224000000
 RCC.AHBFreq_Value=224000000
 RCC.APB1Freq_Value=224000000
@@ -755,10 +755,10 @@ RCC.MCO2PinFreq_Value=224000000
 RCC.OCTOSPIMFreq_Value=224000000
 RCC.PLL2FRACN=0
 RCC.PLL2N=64
-RCC.PLL2P=5
-RCC.PLL2PoutputFreq_Value=51200000
-RCC.PLL2Q=5
-RCC.PLL2QoutputFreq_Value=51200000
+RCC.PLL2P=4
+RCC.PLL2PoutputFreq_Value=64000000
+RCC.PLL2Q=4
+RCC.PLL2QoutputFreq_Value=64000000
 RCC.PLL2RoutputFreq_Value=128000000
 RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
@@ -771,13 +771,13 @@ RCC.PLLQoutputFreq_Value=224000000
 RCC.PLLSourceVirtual=RCC_PLL1_SOURCE_HSI
 RCC.PWRFreq_Value=224000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=51200000
-RCC.SAI2Freq_Value=51200000
+RCC.SAI1Freq_Value=64000000
+RCC.SAI2Freq_Value=64000000
 RCC.SDMMC1Freq_Value=224000000
 RCC.SDMMC2Freq_Value=224000000
 RCC.SPI1Freq_Value=224000000
 RCC.SPI2CLockSelection=RCC_SPI2CLKSOURCE_PLL2P
-RCC.SPI2Freq_Value=51200000
+RCC.SPI2Freq_Value=64000000
 RCC.SPI3Freq_Value=224000000
 RCC.SPI4Freq_Value=112000000
 RCC.SPI5Freq_Value=224000000
@@ -839,8 +839,8 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI2.CalculateBaudRate=25.6 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CalculateBaudRate=2.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
