--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -92,9 +92,9 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
-FDCAN2.CalculateBaudRateNominal=4480000
-FDCAN2.CalculateTimeBitNominal=223
-FDCAN2.CalculateTimeQuantumNominal=22.321428571428573
+FDCAN2.CalculateBaudRateNominal=500000
+FDCAN2.CalculateTimeBitNominal=2000
+FDCAN2.CalculateTimeQuantumNominal=200.0
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
 FDCAN2.NominalPrescaler=5
 FDCAN2.NominalTimeSeg1=1
@@ -115,29 +115,29 @@ GPDMA1.SRCDATAWIDTH_GPDMACH4=DMA_SRC_DATAWIDTH_HALFWORD
 GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
-I2C2.Timing=0x80606391
+I2C2.Timing=0x60606293
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
 MMTAppRegionsCount=0
 MMTConfigApplied=false
+MMTSectionSuffix=_Section
 Mcu.CPN=STM32H563ZIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=IWDG
-Mcu.IP11=LPUART1
-Mcu.IP12=MEMORYMAP
-Mcu.IP13=NETXDUO
-Mcu.IP14=NVIC
-Mcu.IP15=PWR
-Mcu.IP16=RCC
-Mcu.IP17=SPI2
-Mcu.IP18=SYS
-Mcu.IP19=THREADX
+Mcu.IP10=LPUART1
+Mcu.IP11=MEMORYMAP
+Mcu.IP12=NETXDUO
+Mcu.IP13=NVIC
+Mcu.IP14=PWR
+Mcu.IP15=RCC
+Mcu.IP16=SPI2
+Mcu.IP17=SYS
+Mcu.IP18=THREADX
+Mcu.IP19=UART7
 Mcu.IP2=BOOTPATH
-Mcu.IP20=UART7
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=DCACHE1
 Mcu.IP5=ETH
@@ -145,133 +145,136 @@ Mcu.IP6=FDCAN2
 Mcu.IP7=GPDMA1
 Mcu.IP8=I2C2
 Mcu.IP9=ICACHE
-Mcu.IPNb=21
+Mcu.IPNb=20
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF4
-Mcu.Pin100=PB3(JTDO/TRACESWO)
-Mcu.Pin101=PB4(NJTRST)
-Mcu.Pin102=PB5
-Mcu.Pin103=PB6
-Mcu.Pin104=PB7
-Mcu.Pin105=PB8
-Mcu.Pin106=PB9
-Mcu.Pin107=PE0
-Mcu.Pin108=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin109=VP_DCACHE1_VS_DCACHE
-Mcu.Pin11=PF5
-Mcu.Pin110=VP_GPDMA1_VS_GPDMACH4
-Mcu.Pin111=VP_GPDMA1_VS_GPDMACH5
-Mcu.Pin112=VP_ICACHE_VS_ICACHE
-Mcu.Pin113=VP_IWDG_VS_IWDG
-Mcu.Pin114=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin115=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin116=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin117=VP_PWR_VS_SECSignals
-Mcu.Pin118=VP_PWR_VS_LPOM
-Mcu.Pin119=VP_SYS_VS_tim1
-Mcu.Pin12=PF6
-Mcu.Pin120=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin121=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin122=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin13=PF7
-Mcu.Pin14=PF8
-Mcu.Pin15=PF9
-Mcu.Pin16=PF10
-Mcu.Pin17=PC0
-Mcu.Pin18=PC1
-Mcu.Pin19=PC2
+Mcu.Pin10=PF2
+Mcu.Pin100=PG12
+Mcu.Pin101=PG13
+Mcu.Pin102=PG14
+Mcu.Pin103=PG15
+Mcu.Pin104=PB3(JTDO/TRACESWO)
+Mcu.Pin105=PB4(NJTRST)
+Mcu.Pin106=PB5
+Mcu.Pin107=PB6
+Mcu.Pin108=PB7
+Mcu.Pin109=PB8
+Mcu.Pin11=PF3
+Mcu.Pin110=PB9
+Mcu.Pin111=PE0
+Mcu.Pin112=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin113=VP_DCACHE1_VS_DCACHE
+Mcu.Pin114=VP_GPDMA1_VS_GPDMACH4
+Mcu.Pin115=VP_GPDMA1_VS_GPDMACH5
+Mcu.Pin116=VP_ICACHE_VS_ICACHE
+Mcu.Pin117=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin118=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin119=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin12=PF4
+Mcu.Pin120=VP_PWR_VS_SECSignals
+Mcu.Pin121=VP_PWR_VS_LPOM
+Mcu.Pin122=VP_SYS_VS_tim1
+Mcu.Pin123=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin124=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin125=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin13=PF5
+Mcu.Pin14=PF6
+Mcu.Pin15=PF7
+Mcu.Pin16=PF8
+Mcu.Pin17=PF9
+Mcu.Pin18=PF10
+Mcu.Pin19=PH0-OSC_IN(PH0)
 Mcu.Pin2=PE4
-Mcu.Pin20=PC3
-Mcu.Pin21=PA0
-Mcu.Pin22=PA1
-Mcu.Pin23=PA2
-Mcu.Pin24=PA3
-Mcu.Pin25=PA4
-Mcu.Pin26=PA5
-Mcu.Pin27=PA6
-Mcu.Pin28=PA7
-Mcu.Pin29=PC4
+Mcu.Pin20=PH1-OSC_OUT(PH1)
+Mcu.Pin21=PC0
+Mcu.Pin22=PC1
+Mcu.Pin23=PC2
+Mcu.Pin24=PC3
+Mcu.Pin25=PA0
+Mcu.Pin26=PA1
+Mcu.Pin27=PA2
+Mcu.Pin28=PA3
+Mcu.Pin29=PA4
 Mcu.Pin3=PE5
-Mcu.Pin30=PC5
-Mcu.Pin31=PB0
-Mcu.Pin32=PB1
-Mcu.Pin33=PB2
-Mcu.Pin34=PF11
-Mcu.Pin35=PF12
-Mcu.Pin36=PF13
-Mcu.Pin37=PF14
-Mcu.Pin38=PF15
-Mcu.Pin39=PG0
+Mcu.Pin30=PA5
+Mcu.Pin31=PA6
+Mcu.Pin32=PA7
+Mcu.Pin33=PC4
+Mcu.Pin34=PC5
+Mcu.Pin35=PB0
+Mcu.Pin36=PB1
+Mcu.Pin37=PB2
+Mcu.Pin38=PF11
+Mcu.Pin39=PF12
 Mcu.Pin4=PE6
-Mcu.Pin40=PG1
-Mcu.Pin41=PE7
-Mcu.Pin42=PE8
-Mcu.Pin43=PE9
-Mcu.Pin44=PE10
-Mcu.Pin45=PE11
-Mcu.Pin46=PE12
-Mcu.Pin47=PE13
-Mcu.Pin48=PE14
-Mcu.Pin49=PE15
+Mcu.Pin40=PF13
+Mcu.Pin41=PF14
+Mcu.Pin42=PF15
+Mcu.Pin43=PG0
+Mcu.Pin44=PG1
+Mcu.Pin45=PE7
+Mcu.Pin46=PE8
+Mcu.Pin47=PE9
+Mcu.Pin48=PE10
+Mcu.Pin49=PE11
 Mcu.Pin5=PC13
-Mcu.Pin50=PB10
-Mcu.Pin51=PB12
-Mcu.Pin52=PB13
-Mcu.Pin53=PB14
-Mcu.Pin54=PB15
-Mcu.Pin55=PD8
-Mcu.Pin56=PD9
-Mcu.Pin57=PD10
-Mcu.Pin58=PD11
-Mcu.Pin59=PD12
-Mcu.Pin6=PF0
-Mcu.Pin60=PD13
-Mcu.Pin61=PD14
-Mcu.Pin62=PD15
-Mcu.Pin63=PG2
-Mcu.Pin64=PG3
-Mcu.Pin65=PG4
-Mcu.Pin66=PG5
-Mcu.Pin67=PG6
-Mcu.Pin68=PG7
-Mcu.Pin69=PG8
-Mcu.Pin7=PF1
-Mcu.Pin70=PC6
-Mcu.Pin71=PC7
-Mcu.Pin72=PC8
-Mcu.Pin73=PC9
-Mcu.Pin74=PA8
-Mcu.Pin75=PA9
-Mcu.Pin76=PA10
-Mcu.Pin77=PA11
-Mcu.Pin78=PA12
-Mcu.Pin79=PA13(JTMS/SWDIO)
-Mcu.Pin8=PF2
-Mcu.Pin80=PA14(JTCK/SWCLK)
-Mcu.Pin81=PA15(JTDI)
-Mcu.Pin82=PC10
-Mcu.Pin83=PC11
-Mcu.Pin84=PC12
-Mcu.Pin85=PD0
-Mcu.Pin86=PD1
-Mcu.Pin87=PD2
-Mcu.Pin88=PD3
-Mcu.Pin89=PD4
-Mcu.Pin9=PF3
-Mcu.Pin90=PD5
-Mcu.Pin91=PD6
-Mcu.Pin92=PD7
-Mcu.Pin93=PG9
-Mcu.Pin94=PG10
-Mcu.Pin95=PG11
-Mcu.Pin96=PG12
-Mcu.Pin97=PG13
-Mcu.Pin98=PG14
-Mcu.Pin99=PG15
-Mcu.PinsNb=123
+Mcu.Pin50=PE12
+Mcu.Pin51=PE13
+Mcu.Pin52=PE14
+Mcu.Pin53=PE15
+Mcu.Pin54=PB10
+Mcu.Pin55=PB12
+Mcu.Pin56=PB13
+Mcu.Pin57=PB14
+Mcu.Pin58=PB15
+Mcu.Pin59=PD8
+Mcu.Pin6=PC14-OSC32_IN(OSC32_IN)
+Mcu.Pin60=PD9
+Mcu.Pin61=PD10
+Mcu.Pin62=PD11
+Mcu.Pin63=PD12
+Mcu.Pin64=PD13
+Mcu.Pin65=PD14
+Mcu.Pin66=PD15
+Mcu.Pin67=PG2
+Mcu.Pin68=PG3
+Mcu.Pin69=PG4
+Mcu.Pin7=PC15-OSC32_OUT(OSC32_OUT)
+Mcu.Pin70=PG5
+Mcu.Pin71=PG6
+Mcu.Pin72=PG7
+Mcu.Pin73=PG8
+Mcu.Pin74=PC6
+Mcu.Pin75=PC7
+Mcu.Pin76=PC8
+Mcu.Pin77=PC9
+Mcu.Pin78=PA8
+Mcu.Pin79=PA9
+Mcu.Pin8=PF0
+Mcu.Pin80=PA10
+Mcu.Pin81=PA11
+Mcu.Pin82=PA12
+Mcu.Pin83=PA13(JTMS/SWDIO)
+Mcu.Pin84=PA14(JTCK/SWCLK)
+Mcu.Pin85=PA15(JTDI)
+Mcu.Pin86=PC10
+Mcu.Pin87=PC11
+Mcu.Pin88=PC12
+Mcu.Pin89=PD0
+Mcu.Pin9=PF1
+Mcu.Pin90=PD1
+Mcu.Pin91=PD2
+Mcu.Pin92=PD3
+Mcu.Pin93=PD4
+Mcu.Pin94=PD5
+Mcu.Pin95=PD6
+Mcu.Pin96=PD7
+Mcu.Pin97=PG9
+Mcu.Pin98=PG10
+Mcu.Pin99=PG11
+Mcu.PinsNb=126
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -402,8 +405,10 @@ PB3(JTDO/TRACESWO).GPIO_Label=JTDO
 PB3(JTDO/TRACESWO).Locked=true
 PB3(JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
 PB4(NJTRST).Locked=true
+PB5.GPIOParameters=PinAttribute
 PB5.Locked=true
 PB5.Mode=FDCAN_Activate
+PB5.PinAttribute=
 PB5.Signal=FDCAN2_RX
 PB6.Locked=true
 PB6.Mode=FDCAN_Activate
@@ -426,6 +431,10 @@ PC10.Locked=true
 PC11.Locked=true
 PC12.Locked=true
 PC13.Locked=true
+PC14-OSC32_IN(OSC32_IN).Mode=LSE-External-Oscillator
+PC14-OSC32_IN(OSC32_IN).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT(OSC32_OUT).Mode=LSE-External-Oscillator
+PC15-OSC32_OUT(OSC32_OUT).Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=ADC12_INP12
 PC2.Locked=true
@@ -460,6 +469,13 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=MUX_SEL4
 PC9.Locked=true
 PC9.Signal=GPIO_Output
+PCC.Checker=false
+PCC.Line=STM32H563/H573
+PCC.MCU=STM32H563ZITx
+PCC.PartNumber=STM32H563ZITx
+PCC.Series=STM32H5
+PCC.Temperature=25
+PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
@@ -677,6 +693,10 @@ PG9.GPIOParameters=GPIO_Label
 PG9.GPIO_Label=TSMS_GPIO
 PG9.Locked=true
 PG9.Signal=GPIO_Input
+PH0-OSC_IN(PH0).Mode=HSE-External-Oscillator
+PH0-OSC_IN(PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT(PH1).Mode=HSE-External-Oscillator
+PH1-OSC_OUT(PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -690,10 +710,11 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H563ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H5 V1.5.0
 ProjectManager.FreePins=false
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -710,99 +731,99 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,15-MX_IWDG_Init-IWDG-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
-RCC.ADCFreq_Value=224000000
-RCC.AHBFreq_Value=224000000
-RCC.APB1Freq_Value=224000000
-RCC.APB1TimFreq_Value=224000000
+RCC.ADCFreq_Value=175000000
+RCC.AHBFreq_Value=175000000
+RCC.APB1Freq_Value=175000000
+RCC.APB1TimFreq_Value=175000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=112000000
-RCC.APB2TimFreq_Value=224000000
-RCC.APB3Freq_Value=224000000
+RCC.APB2Freq_Value=87500000
+RCC.APB2TimFreq_Value=175000000
+RCC.APB3Freq_Value=175000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=32000000
 RCC.CRSFreq_Value=48000000
 RCC.CSI_VALUE=4000000
-RCC.CortexFreq_Value=224000000
+RCC.CortexFreq_Value=175000000
 RCC.DACFreq_Value=32768
-RCC.EPOD_VALUE=32000000
-RCC.ETHFreq_Value=224000000
-RCC.FCLKCortexFreq_Value=224000000
-RCC.FDCANClockSelection=RCC_FDCANCLKSOURCE_PLL1Q
-RCC.FDCANFreq_Value=224000000
+RCC.EPOD_VALUE=25000000
+RCC.ETHFreq_Value=175000000
+RCC.FCLKCortexFreq_Value=175000000
+RCC.FDCANFreq_Value=25000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=224000000
+RCC.HCLKFreq_Value=175000000
 RCC.HSE_VALUE=25000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=64000000
-RCC.I2C1Freq_Value=224000000
-RCC.I2C2Freq_Value=224000000
-RCC.I2C3Freq_Value=224000000
-RCC.I2C4Freq_Value=224000000
-RCC.I3C1Freq_Value=224000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
-RCC.LPTIM1Freq_Value=224000000
-RCC.LPTIM2Freq_Value=224000000
-RCC.LPTIM3Freq_Value=224000000
-RCC.LPTIM4Freq_Value=224000000
-RCC.LPTIM5Freq_Value=224000000
-RCC.LPTIM6Freq_Value=224000000
-RCC.LPUART1Freq_Value=224000000
+RCC.I2C1Freq_Value=175000000
+RCC.I2C2Freq_Value=175000000
+RCC.I2C3Freq_Value=175000000
+RCC.I2C4Freq_Value=175000000
+RCC.I3C1Freq_Value=175000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2M,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL2Source,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.LPTIM1Freq_Value=175000000
+RCC.LPTIM2Freq_Value=175000000
+RCC.LPTIM3Freq_Value=175000000
+RCC.LPTIM4Freq_Value=175000000
+RCC.LPTIM5Freq_Value=175000000
+RCC.LPTIM6Freq_Value=175000000
+RCC.LPUART1Freq_Value=175000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSIRC_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
-RCC.MCO2PinFreq_Value=224000000
-RCC.OCTOSPIMFreq_Value=224000000
+RCC.MCO2PinFreq_Value=175000000
+RCC.OCTOSPIMFreq_Value=175000000
 RCC.PLL2FRACN=0
+RCC.PLL2M=5
 RCC.PLL2N=64
 RCC.PLL2P=4
-RCC.PLL2PoutputFreq_Value=64000000
+RCC.PLL2PoutputFreq_Value=80000000
 RCC.PLL2Q=4
-RCC.PLL2QoutputFreq_Value=64000000
-RCC.PLL2RoutputFreq_Value=128000000
+RCC.PLL2QoutputFreq_Value=80000000
+RCC.PLL2RoutputFreq_Value=160000000
+RCC.PLL2Source=RCC_PLL2_SOURCE_HSE
 RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
 RCC.PLL3RoutputFreq_Value=258000000
 RCC.PLLFRACN=0
 RCC.PLLM=2
 RCC.PLLN=28
-RCC.PLLPoutputFreq_Value=224000000
-RCC.PLLQoutputFreq_Value=224000000
-RCC.PLLSourceVirtual=RCC_PLL1_SOURCE_HSI
-RCC.PWRFreq_Value=224000000
+RCC.PLLPoutputFreq_Value=175000000
+RCC.PLLQoutputFreq_Value=175000000
+RCC.PLLSourceVirtual=RCC_PLL1_SOURCE_HSE
+RCC.PWRFreq_Value=175000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=64000000
-RCC.SAI2Freq_Value=64000000
-RCC.SDMMC1Freq_Value=224000000
-RCC.SDMMC2Freq_Value=224000000
-RCC.SPI1Freq_Value=224000000
+RCC.SAI1Freq_Value=80000000
+RCC.SAI2Freq_Value=80000000
+RCC.SDMMC1Freq_Value=175000000
+RCC.SDMMC2Freq_Value=175000000
+RCC.SPI1Freq_Value=175000000
 RCC.SPI2CLockSelection=RCC_SPI2CLKSOURCE_PLL2P
-RCC.SPI2Freq_Value=64000000
-RCC.SPI3Freq_Value=224000000
-RCC.SPI4Freq_Value=112000000
-RCC.SPI5Freq_Value=224000000
-RCC.SPI6Freq_Value=112000000
-RCC.SYSCLKFreq_VALUE=224000000
+RCC.SPI2Freq_Value=80000000
+RCC.SPI3Freq_Value=175000000
+RCC.SPI4Freq_Value=87500000
+RCC.SPI5Freq_Value=175000000
+RCC.SPI6Freq_Value=87500000
+RCC.SYSCLKFreq_VALUE=175000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART12Freq_Value=224000000
-RCC.UART4Freq_Value=224000000
-RCC.UART5Freq_Value=224000000
-RCC.UART7Freq_Value=224000000
-RCC.UART8Freq_Value=224000000
-RCC.UART9Freq_Value=224000000
+RCC.UART12Freq_Value=175000000
+RCC.UART4Freq_Value=175000000
+RCC.UART5Freq_Value=175000000
+RCC.UART7Freq_Value=175000000
+RCC.UART8Freq_Value=175000000
+RCC.UART9Freq_Value=175000000
 RCC.UCPD1outputFreq_Value=8000000
-RCC.USART10Freq_Value=224000000
-RCC.USART11Freq_Value=224000000
-RCC.USART1Freq_Value=112000000
-RCC.USART2Freq_Value=224000000
-RCC.USART3Freq_Value=224000000
-RCC.USART6Freq_Value=224000000
+RCC.USART10Freq_Value=175000000
+RCC.USART11Freq_Value=175000000
+RCC.USART1Freq_Value=87500000
+RCC.USART2Freq_Value=175000000
+RCC.USART3Freq_Value=175000000
+RCC.USART6Freq_Value=175000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=4000000
+RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=448000000
-RCC.VCOPLL2OutputFreq_Value=256000000
+RCC.VCOInputFreq_Value=12500000
+RCC.VCOOutputFreq_Value=350000000
+RCC.VCOPLL2OutputFreq_Value=320000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
 SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
@@ -840,7 +861,7 @@ SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI2.CalculateBaudRate=2.0 MBits/s
+SPI2.CalculateBaudRate=2.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
@@ -863,8 +884,6 @@ VP_GPDMA1_VS_GPDMACH5.Mode=SIMPLEREQUEST_GPDMACH5
 VP_GPDMA1_VS_GPDMACH5.Signal=GPDMA1_VS_GPDMACH5
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
-VP_IWDG_VS_IWDG.Mode=IWDG_Activate
-VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
